--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.27 
+0.27 25 Jun 2016 
  - RestXml (S3, f.ex) services now complete responses from headers (shardiwal)
  - New API: ServiceCatalog
  - MachineLearning API update: Tagging API
