--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
  - On errors 503 XMLResponse would not process the error correctly (returning
    a non-Paws exception, so the error couldn't be retried. (brianhartsock)
  - New API: Snowball
+ - New API: KinesisAnalytics
+ - New API: ELBv2 (Application Load Balancer)
  
 0.27 25 Jun 2016 
  - RestXml (S3, f.ex) services now complete responses from headers (shardiwal)
