--- a/Changes
+++ b/Changes
@@ -4,7 +4,9 @@
  - New API: Snowball
  - New API: KinesisAnalytics
  - New API: ELBv2 (Application Load Balancer)
- 
+ - Route53: API update: GetDomainSuggestions, RenewDomain, ViewBilling
+ - RDS: API update: RestoreDBClusterFromS3
+
 0.27 25 Jun 2016 
  - RestXml (S3, f.ex) services now complete responses from headers (shardiwal)
  - New API: ServiceCatalog
