--- a/Changes
+++ b/Changes
@@ -10,6 +10,8 @@
  - WorkSpaces API update: DescribeWorkspacesConnectionStatus ModifyWorkspaceProperties StartWorkspaces StopWorkspaces
  - IoT API update: ThingTypes operations, ListOutgoingCertificates
  - MarketplaceCommerceAnalytics API update: StartSupportDataExport
+ - GameLift API update: SearchGameSessions
+ - EC2 API update: DescribeHostReservationOfferings DescribeHostReservations GetHostReservationPurchasePreview PurchaseHostReservation
 
 0.27 25 Jun 2016 
  - RestXml (S3, f.ex) services now complete responses from headers (shardiwal)
