--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.28 30 Aug 2015
+0.28 30 Aug 2015 23:45:00
  - On errors 503 XMLResponse would not process the error correctly (returning
    a non-Paws exception, so the error couldn't be retried. (brianhartsock)
  - New API: Snowball
