--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@
    his inputs. Thanks to ilmari and rpcme
  - New API: Budgets
  - New API: SMS (Server Migration Service)
+ - CloudFormation API update
  - ElasticBeanstalk API update
  - Gamelift API update: DescribeInstances
  - ECR API update: DescribeImages
