--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.30 
+ - CodeDeploy API update: IamSessionArn, IamUserArn
+ - ECS API update: Attributes and Placement constraints
+
 0.29 27 Dec 2016
  - New functionality: Enabled and documented paginators (methods that repeatedly call methods that 
    return partial responses)
