--- a/Changes
+++ b/Changes
@@ -2,8 +2,11 @@
  - Specify minumum perl version (PR #137)
  - Update RestXmlCaller.pm to fix malformed xml schema issues (PR #133)
  - Don't trim values coming from APIs (Issue #130)
+ - New API: CUR (AWS Cost and Usage Report Service) 
  - CodeDeploy API update: IamSessionArn, IamUserArn
  - ECS API update: Attributes and Placement constraints
+ - RDS APU update: create Aurora read replica of an RDS
+ - DynamoDB APU update: Tagging for DynamoDB
 
 0.29 27 Dec 2016
  - New functionality: Enabled and documented paginators (methods that repeatedly call methods that 
