--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@
  - ELBv2 API update
  - ECS API update 
  - EC2 API update
+ - StorageGateway API update
 
 0.30 04 Jan 2017 
  - Specify minumum perl version (PR #137)
