--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - New API: LexRuntime
  - New API: Organizations
  - New API: MTurk (Mechanical Turk)
+ - New API: WorkDocs
  - CodeCommit API update
  - ELBv2 API update
  - ECS API update 
@@ -17,7 +18,10 @@
  - DynamoDB API update
  - IAM API update
  - RDS API update
- - New API: WorkDocs
+ - CloudDirectory API update
+ - DeviceFarm API update 
+ - EMR API update
+ - ApiGateway API update
 
 0.31 01 Feb 2017 
  - Bug fixed: Services that use QueryCaller and EC2Caller were not serializing Booleans correctly
