--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
  - New API: Organizations
  - New API: MTurk (Mechanical Turk)
  - New API: WorkDocs
+ - New API: ResourceTagging
  - CodeCommit API update
  - ELBv2 API update
  - ECS API update 
@@ -25,6 +26,9 @@
  - Pinpoint API update
  - Discovery API update
  - CloudTrail API update
+ - Batch API update
+ - CloudFront API update
+ - CloudDirectory API update
 
 0.31 01 Feb 2017 
  - Bug fixed: Services that use QueryCaller and EC2Caller were not serializing Booleans correctly
