--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.32
+ - Bug fixed: Issue #105. Some API calls where not correctly handling parameters specified in their URI.
+   Notably, this fixes S3 ListObjectsV2. (dakkar)
  - New API: LexRuntime
  - New API: Organizations
  - New API: MTurk (Mechanical Turk)
