--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-0.32
+0.32 16 Apr 2017
  - Speed up Credential Refreshing (Arthur Axel fREW Schmidt)
  - Bug fixed: Issue #105. Some API calls where not correctly handling parameters specified in their URI.
    Notably, this fixes S3 ListObjectsV2. (dakkar)
+ - Bug fixed: RestJSON services support parameters and results in body (streaming responses)
  - S3 now supports Metadata correctly (PopeFelix)
  - New API: LexRuntime
  - New API: Organizations
