--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 0.33 
  - New Credential provider: Paws::Credential::Explicit for providing in-code credentials (meis)
  - Bug fixed: ETag not defined when using MojoAsyncCaller (PopeFelix)
+ - New parameter for service "endpoint", used to specify
+ - Breaking change: endpoints for services are calculated immediately when you invoke ->service.
+   before they were calculated when the first method call to the service was made, so you got
+   "no region" exceptions on the first call. Now the exceptions are thrown immediately.
  - New API: MarketplaceEntitlement
  - API update: AppStream
  - API update: CloudFormation
