Update Changes. Give credit

--- a/Changes
+++ b/Changes
@@ -6,8 +6,9 @@
  - Breaking change: endpoints for services are calculated immediately when you invoke ->service.
    before they were calculated when the first method call to the service was made, so you got
    "no region" exceptions on the first call. Now the exceptions are thrown immediately.
- - Bug fixed: Paginators not working correctly in non-callback mode
+ - Bug fixed: Paginators not working correctly in non-callback mode (SeptamusNonovant. Issue #146)
  - Bug fixed: Throw exceptions on methods that don't return anything
+ - Bug fixed: Handle plain values in RestXML services, like S3s' PutBucketPolicy (sven-schubert)
  - New API: MarketplaceEntitlement
  - New API: Athena
  - API update: AppStream
