Update changes. Point botocore to version used to generate SDK

--- a/Changes
+++ b/Changes
@@ -14,6 +14,9 @@
  - API update: CodePipeline
  - API update: DMS
  - API update: Route53
+ - API update: CloudWatchEvents
+ - API update: GameLift
+ - API update: S3
 
 0.33 04 Jun 2017
  - New Credential provider: Paws::Credential::Explicit for providing in-code credentials (meis)
