Update Changes. point botocore to version used to generate SDK

--- a/Changes
+++ b/Changes
@@ -34,6 +34,8 @@
  - API update: ApplicationAutoScaling
  - API update: Budget
  - API update: Route53
+ - API update: DeviceFarm
+ - API update: CloudWatchLogs
 
 0.34 07 Jul 2017
  - New Credential provider: Paws::Credential::ECSContainerProfile (gadgetjunkie)
