Update Changes. Point botocore to version used to generate SDK

--- a/Changes
+++ b/Changes
@@ -37,6 +37,8 @@
  - API update: DeviceFarm
  - API update: CloudWatchLogs
  - API update: ServiceCatalog
+ - API update: SES
+ - API update: IAM
 
 0.34 07 Jul 2017
  - New Credential provider: Paws::Credential::ECSContainerProfile (gadgetjunkie)
