--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 0.35
+ - Fix Bug: Correctly throw Paws::Exceptions even if there is no information
+            in the body / headers (#190 svn-schubert) (#198 ilmari)
  - New API: MobileHub
  - New API: MigrationHub
  - New API: Glue
