--- a/Changes
+++ b/Changes
@@ -3,6 +3,18 @@
  - API update: EC2
  - API update: ELBv2
  - API update: OpsWorksCM
+ - API update: WAFRegional
+ - API update: WAF
+ - API update: SQS
+ - API update: SES
+ - API update: ES
+ - API update: CodeCommit
+ - API update: ECR
+ - API update: RDS
+ - API update: DMS
+ - API update: ElasticBeanstalk
+ - API update: Lightsail
+ - API update: SSM
 
 0.35 09 Oct 2017
  - Fix Bug: Correctly throw Paws::Exceptions even if there is no information
