--- a/Changes
+++ b/Changes
@@ -3,7 +3,24 @@
  - Better docu generation (osoriano)
  - Documentation update: Now POD contains links from the botocore documentation
  - New API: Pricing
+ - New API: CostExplorer
+ - API update: Shield
+ - API update: Rekognition
+ - API update: Route53
+ - API update: Glue
+ - API update: Organizations
+ - API update: CodeBuild
+ - API update: StepFunctions
+ - API update: WorkDocs
+ - API update: CloudFormation
+ - API update: Firehose
+ - API update: Kinesis
+ - API update: StorageGateway
+ - API update: EMR
+ - API update: XRay
+ - API update: ACM
  - API update: S3
+ - API update: ApiGateway
  - API update: ApplicationAutoscaling
  - API update: ECS
  - API update: EC2
