--- a/Changes
+++ b/Changes
@@ -4,6 +4,19 @@
  - Documentation update: Now POD contains links from the botocore documentation
  - New API: Pricing
  - New API: CostExplorer
+ - New API: Translate
+ - New API: ServerlessRepo
+ - New APIs: SageMaker and SageMakerRuntime
+ - New APIs: MediaConvert, MediaLive, MediaPackage, MediaStore, MediaStoreData
+ - New APIs: KinesisVideo, KinesisVideoMedia, KinesisVideoArchivedMedia
+ - New API: MQ
+ - New API: ResourceGroups
+ - New API: GuardDuty
+ - New API: Comprehend
+ - New API: Cloud9
+ - New API: AppSync
+ - New API: AlexaForBusiness
+ - API update: IoT
  - API update: Shield
  - API update: Rekognition
  - API update: Route53
@@ -44,6 +57,16 @@
  - API update: CloudFront
  - API update: Glue
  - API update: ElastiCache
+ - API update: Lambda
+ - API update: SSM
+ - API update: CodeDeploy
+ - API update: Batch
+ - API update: CognitoIdp
+ - API update: Greengrass
+ - API update: ECS
+ - API update: AutoScaling
+ - API update: DynamoDB
+ - API update: Glacier
 
 0.36 03 Nov 2017
  - Fix Bug: #210: S3 PutObject was not working: the Content-MD5 header was not 
